Tehty Haloo-metodi Korjattu db-yhteys

--- a/TaikuriAppi/Views/Varaus/Haloo.cshtml
+++ b/TaikuriAppi/Views/Varaus/Haloo.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<TaikuriAppi.Models.Varaukset>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Haloo";
 }
 
-<h1>Index</h1>
+<h1>Haloo</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
