--- a/TaikuriAppi/Views/Shared/_Layout.cshtml
+++ b/TaikuriAppi/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Varaukset" asp-action="Index">Varaukset</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Varaus" asp-action="Haloo">Varaukset</a>
                         </li>
                     </ul>
                 </div>
