Index.cshtml aloitussivulle lisätty dropdown valikko, linkitys vielä tekemättä

--- a/TaikuriAppi/Views/Home/Index.cshtml
+++ b/TaikuriAppi/Views/Home/Index.cshtml
@@ -1,7 +1,19 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<h1>Taikureiden kammio</h1>
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Mitä haluat?
+  </button>
+  <ul class="dropdown-menu dropdown-menu-dark">
+    <li><a class="dropdown-item active" href="#">Hae taikuria</a></li>
+    <li><a class="dropdown-item" href="#">Varaa taikuri</a></li>
+    <li><a class="dropdown-item" href="#">Tee valitus</a></li>
+    <li><hr class="dropdown-divider"></li>
+    <li><a class="dropdown-item" href="#">Muu toiminto</a></li>
+  </ul>
+</div>
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
