--- a/TaikuriAppi/Views/Home/Index.cshtml
+++ b/TaikuriAppi/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<style>
+    body {background-image: url(Taikuri.jpg);}
+</style>
 <h1>Taikureiden kammio</h1>
 <div class="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
