--- a/TaikuriAppi/Views/Home/Index.cshtml
+++ b/TaikuriAppi/Views/Home/Index.cshtml
@@ -1,23 +1,75 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model IEnumerable<TaikuriAppi.Models.Taikuri>
+
+@{
+    ViewData["Title"] = "Index";
 }
-<style>
-    body {background-image: url(Taikuri.jpg);}
-</style>
-<h1>Taikureiden kammio</h1>
-<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Mitä haluat?
-  </button>
-  <ul class="dropdown-menu dropdown-menu-dark">
-    <li><a class="dropdown-item active" href="#">Hae taikuria</a></li>
-    <li><a class="dropdown-item" href="#">Varaa taikuri</a></li>
-    <li><a class="dropdown-item" href="#">Tee valitus</a></li>
-    <li><hr class="dropdown-divider"></li>
-    <li><a class="dropdown-item" href="#">Muu toiminto</a></li>
-  </ul>
-</div>
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+
+<h1>Index</h1>
+
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+@using(Html.BeginForm("Index", "Home", FormMethod.Get))
+{
+    <label for="Toimialat">Toimialat</label>
+  <select name="Toimialat" id="Toimialat">
+      <option value=""></option>
+        <option value="lastentaikuus">lastentaikuus</option>
+        <option value="aikuistentaikuus">aikuistentaikuus</option>
+        <option value="kaikille">kaikille</option>
+        
+    </select>
+    <text>Lokaatio</text>  <select name="Lokaatio" id="Lokaatio">
+        <option value=""></option>
+        <option value="Helsinki">Helsinki</option>
+        <option value="Espoo">Espoo</option>
+        <option value="Vantaa">Vantaa</option>
+        
+    </select>
+ <label for="Haku">Taiteilijanimi haku</label>  @Html.TextBox("Haku") <input type = "submit"
+   name = "submit"
+   value ="Haku">
+}
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Taiteilijanimi)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Toimialat)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Taidot)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Lokaatio)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Taiteilijanimi)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Toimialat)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Taidot)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Lokaatio)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.TaikuriId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.TaikuriId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.TaikuriId">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
